--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12"
   },
   "files": [
     "build/main",
