--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "target": "esnext",
     "outDir": "build/module",
-    "module": "esnext"
+    "module": "esnext",
+    "skipLibCheck": true,
   },
   "exclude": [
-    "node_modules/**"
+    "node_modules"
   ]
 }
