--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neo-news-google-scraper",
+  "name": "neo-scraper-google-news",
   "version": "1.2.0",
   "description": "Google News Scraper in Typescript",
   "main": "build/main/index.js",
