--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "neo-scraper-google-news",
-  "version": "1.2.0",
+  "version": "1.0.0",
   "description": "Google News Scraper in Typescript",
   "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
+  "types": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/adarshsingh1407/neo-google-news-scraper",
   "license": "MIT",
