--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "target": "esnext",
     "outDir": "build/module",
-    "module": "esnext",
-    "skipLibCheck": true,
+    "module": "esnext"
   },
   "exclude": [
     "node_modules"
